styles.css
/*


Global Styles


*/
.press-start-2p-regular {
  font-family: "Press Start 2P", system-ui;
  font-weight: 400;
  font-style: normal;
}


:root {
      --blue: #35476E;
      --black: #000;
      --white: #fff;
      --green: #486941;
      --grey: #ADB1B3;


    }

  body {
    background-color: var(--blue);
    color: var(--grey);
    font: 16px/1.5 "Press Start 2P", system-ui;
    text-align: center;
  }

  .li {
    text-align: left;
    font-size: 10px; 
    color: black; 
  }
 
   
/* 

Log In Page 

*/

.login-form{
    border-radius: 15px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
    padding: 310px 20px;
    width:500px;
    text-align: center;
    justify-content: center;
    
}

label {
    display: block;
    margin-top: 10px;
    margin-bottom: 5px;
    font-weight: bold;
    width: 100%;
}

input{
    display: block;
    width: 100%;
    margin-bottom: 15px;
    padding: 10px;
    box-sizing: border-box;
    border: 1px solid #ccc;
    border-radius: 5px;

}




/*


Index Page 

*/



.description{
    text-align: center;
    max-width: 600px;
    margin: 0 auto;
}

/* 

BUTTONS

*/
.buttons {
  appearance: button;
  background-color: #252323;
  background-image: none;
  border: 1px solid #000;
  border-radius: 4px;
  box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
  box-sizing: border-box;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  margin: 0 5px 10px 0;
  overflow: visible;
  padding: 12px 40px;
  text-align: center;
  text-transform: none;
  touch-action: manipulation;
  user-select: none;
  -webkit-user-select: none;
  vertical-align: middle;
  white-space: nowrap;
}

.buttons:focus {
  text-decoration: none;
}

.buttons:hover {
  text-decoration: none;
}

.buttons:active {
  box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
  outline: 0;
}

.buttons:not([disabled]):active {
  box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
  transform: translate(2px, 2px);
}

@media (min-width: 768px) {
  .buttons {
    padding: 12px 50px;
  }
}


/* Navigation Bar */

nav {
  position: fixed;
  top: 24px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 100; 
  display: flex;
  align-items: center;
  gap: 4px; 
  backdrop-filter: blur(10px);
  border: 1px solid rgba(255, 255, 255, 0.2);
  border-radius: 100px;
  padding: 6px 8px;
  white-space: nowrap;
  transition: box-shows 0.3s;
  background: black;

}

.logo {
  font-size: 15px;
  font-weight: bold;
  color: var(--green);
  letter-spacing: 1px;
  padding: 4px 14px; 
  margin-right: 4px; 
}

.nav-links{
display: flex;
gap: 2px;
list-style: none;
}

.nav-links a {
  display: flex;
  gap: 2px; 
  text-decoration: none;
  font-size: 0.85rem;
  font-weight: 500;
  padding: 7px 16px;
  border-radius: 100px;
  transition: color 0.2s, background 0.2s; 
  color: #888;
}

/* 


Community Feed 

*/ 

.feed { 
  background-color: var(--green);
  border: 4px solid var(--black);
  color: var(--grey);
  padding: 20px;
  max-width: 600px;
  border-radius: 10px;
  margin-right: auto;

}

.friends-online {
  background-color: var(--green);
  border: 4px solid var(--black);
  color: var(--grey);
  padding: 20px;
  margin: 20px auto;
  max-width: 600px;
  border-radius: 10px;
  margin-left: auto;

}

.post {
  background-color: var(--black);
  border: 2px solid var(--white);
  color: var(--grey);
  font-size: 10px ;
  padding: 15px;
  margin-bottom: 15px;
  border-radius: 5px;
}

/*

Profile Page 

*/

.stats-section {
  background-color: var(--green);
  border: 4px solid var(--black);
  color: var(--grey);
  padding: 20px;
  margin: 20px auto;
  max-width: 600px;
  border-radius: 10px;
}
  
.bio-section {
  background-color: var(--green);
  border: 4px solid var(--black);
  color: var(--grey);
  margin : 20px auto;
  padding: 20px;
  max-width: 600px;
  border-radius: 10px;

} 

.stats-header {
  color: var(--black);
  font-size: 25px;
  font-weight: bold;
}
 
.bio-header {
  color: var(--black);
  font-size: 25px;
  font-weight: bold;
}

/* 

Training Page 

*/

.training-container {
  display: flex;
  gap: 15px;

}

.strength-training {
  background-color: var(--green);
  border: 4px solid var(--black);
  color: var(--grey);
  padding: 20px;
  margin: 20px auto;
  max-width: 600px;
  border-radius: 10px;
  font-size: 15px;
  text-align: left; 
}

.technique-training {
  background-color: var(--green);
  border: 4px solid var(--black);
  color: var(--grey);
  padding: 20px;
  margin: 20px auto;
  max-width: 600px;
  border-radius: 10px;
  font-size: 15px;
} 

.fingerboard-training {
  background-color: var(--green);
  border: 4px solid var(--black);
  color: var(--grey);
  padding: 20px;
  margin: 20px auto;
  max-width: 600px;
  border-radius: 10px;
  font-size: 15px;
  text-align: left;
} 

.train-title {
  color: var(--black);
  font-size: 25px;
  font-weight: bold;
  text-align: center;
}

.tech-injury {
  font-size: 20px;
  color: var(--black);
  font-style: italic;
  text-align: center;
}

/*

Create Climb Page 


*/

.Climb-Form {
  background-color: var(--green);
  border: 4px solid var(--black);
  color: var(--grey);
  padding: 20px;
  margin: 20px auto;
  max-width: 600px;
  border-radius: 10px;
}


/*

Find Users Page 

*/

.findUsers {
  background-color: var(--green);
  border: 4px solid var(--black);
  color: var(--grey);
  padding: 20px;
  margin: 20px auto;
  max-width: 600px;
  border-radius: 10px;
}

